--- a/index.html
+++ b/index.html
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <!DOCTYPE html>
+    <html lang="es">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Portafolio de José</title>
+        <link rel="stylesheet" href="assets/css/style.css">
+    </head>
+
+    <body>
+        <header>
+            <h1>José - Desarrollador Web</h1>
+            <nav>
+                <a href="#inicio">Inicio</a>
+                <a href="#sobre-mi">Sobre mí</a>
+                <a href="#proyectos">Proyectos</a>
+                <a href="#contacto">Contacto</a>
+            </nav>
+        </header>
+
+        <section id="inicio">
+            <h2>Bienvenido a mi portafolio</h2>
+            <p>Recién titulado en DAW. Apasionado por la programación web y las nuevas tecnologías.</p>
+        </section>
+
+        <section id="sobre-mi">
+            <h2>Sobre mí</h2>
+            <p>Soy una persona responsable, ordenada y con ganas de aprender. Manejo tecnologías como JavaScript, PHP,
+                MySQL y Java.</p>
+        </section>
+
+        <section id="proyectos">
+            <h2>Proyectos</h2>
+            <div class="proyecto">
+                <h3>Mini red social</h3>
+                <p>Una aplicación con login, registro y publicaciones básicas.</p>
+                <a href="#">Ver en GitHub</a>
+            </div>
+            <div class="proyecto">
+                <h3>App de tareas</h3>
+                <p>CRUD de tareas con base de datos.</p>
+                <a href="#">Ver en GitHub</a>
+            </div>
+        </section>
+
+        <section id="contacto">
+            <h2>Contacto</h2>
+            <p>Email: tuemail@example.com</p>
+            <p><a href="https://github.com/TuUsuario">GitHub</a></p>
+            <p><a href="https://linkedin.com/in/TuUsuario">LinkedIn</a></p>
+        </section>
+
+        <footer>
+            <p>© 2025 José - Todos los derechos reservados</p>
+        </footer>
+    </body>
+
+    </html>
+
 </body>
+
 </html>
