--- a/index.html
+++ b/index.html
@@ -5,23 +5,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body>
-    <header>
-        <img src="assets/img/foto_perfil.jpg" alt="imagen">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+<body class="max-w-xl mx-auto min-h-dvh bg-gradient-to-b from-black via-sky-800 to-gray-800">
 
+    <header class="text-white">
+        <!-- <img src="assets/img/foto_perfil.jpg" alt="Jose Juan"
+        class="h-150 w-full object-cover mask-radial-at-center mask-radial-from-50% mask-radial-to-70%"> -->
+        <section class="flex justify-center items-center">
+            <nav>
+                <ul class="flex gap-4">
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#sobre-mi">Sobre mí</a></li>
+                    <li><a href="#habilidades">Habilidades</a></li>
+                    <li><a href="#proyectos">Proyectos</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
+        </section>
 
+        <section class="flex gap-4 justify-center items-center">
+            <a class="bg-white text-black p-2 size-12 rounded-full items-center justify-center flex hover:scale-110 transition-transform duration-300"
+                href="https://www.linkedin.com/in/jose-juan-dos-reis-40aa10262/" target="_blank">
+                <svg class="w-6 h-6 ">
+                    <use href="assets/sprite.svg#linkedin"></use>
+                </svg>
+            </a>
+            <a class="bg-gradient-to-tr from-yellow-300 via-pink-600 to-purple-600 text-black p-2 size-12 rounded-full items-center justify-center flex hover:bg-pink-500 hover:scale-110 transition-transform duration-300" href="https://www.instagram.com/dossrreiss/" target="_blank">
+                <svg class="w-6 h-6 ">
+                    <use href="assets/sprite.svg#instagram"></use>
+                </svg>
+            </a>
+            <a class="bg-gray-900 p-2 size-12 rounded-full items-center justify-center flex
+             hover:scale-110 transition-transform duration-300" href="https://github.com/CrankyJJ" target="_blank">
+                <svg class="w-6 h-6 ">
+                    <use href="assets/sprite.svg#github"></use>
+                </svg>
+            </a>
+            <a class="bg-black p-2 size-12 rounded-full items-center justify-center flex hover:scale-110 transition-transform duration-300"
+                href="https://x.com/" target="_blank">
+                <svg class="w-6 h-6 ">
+                    <use href="assets/sprite.svg#x"></use>
+                </svg>
+            </a>
+        </section>
     </header>
+    <footer>
+        <p>© 2025 Jose Juan Dos Reis De Conceicao. Todos los derechos reservados.</p>
+    </footer>
 </body>
 
 </html>
