Creadas las secciones, falta añadirle contenido

--- a/index.html
+++ b/index.html
@@ -4,71 +4,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>Jose Juan Dos Reis De Conceicao - Portafolio</title>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <style>
+        .skill-card {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 1.5rem;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 0.5rem;
+            transition: transform 0.3s, background 0.3s;
+        }
+        .skill-card:hover {
+            transform: translateY(-5px);
+            background: rgba(255, 255, 255, 0.15);
+        }
+        .skill-card i {
+            font-size: 4rem;
+        }
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 1.5rem;
+            max-width: 900px;
+            margin: 2rem auto;
+            padding: 0 1rem;
+        }
+    </style>
 </head>
 
 <body class="bg-gradient-to-b from-black via-sky-800 to-gray-800 min-h-screen flex flex-col">
 
-    <header class="text-white">
-        <!-- <img src="assets/img/foto_perfil.jpg" alt="Jose Juan"
-        class="h-150 w-full object-cover mask-radial-at-center mask-radial-from-50% mask-radial-to-70%"> -->
-        <section class="flex justify-center items-center pt-8">
-            <nav>
-                <div class="hidden lg:flex lg:gap-x-12">
-                    <a href="#" class="text-sm/6 font-semibold text-white hover:scale-110 transition-transform duration-300">Incio</a>
-                    <a href="#" class="text-sm/6 font-semibold text-white hover:scale-110 transition-transform duration-300">Sobre mí</a>
-                    <a href="#" class="text-sm/6 font-semibold text-white hover:scale-110 transition-transform duration-300">Habilidades</a>
-                    <a href="#" class="text-sm/6 font-semibold text-white hover:scale-110 transition-transform duration-300">Proyectos</a>
-                </div>
-            </nav>
-        </section>
+    <div id="container" class="text-white">
+        <!-- Navbar -->
+        <nav id="navbar">
+            <h2 class="text-2xl font-bold text-center mb-4">Jose Juan Dos Reis De Conceicao</h2>
 
-    </header>
-    <main class="flex-grow">
-        <div class="mt-20 flex flex-col items-center justify-center">
-            <div class="text-white text-center text-5xl font-semibold tracking-tight text-balance">
-                <h1 class="">Bienvenido a mi
-                    portafolio</h1>
-                <p class="mt-8 mb-8 text-lg font-medium text-pretty text-gray-400 sm:text-xl/8">Hola, soy Jose, un joven
-            </div>
-            <div>
-                <img src="assets/img/foto_perfil.jpg" alt="">
-            </div>
-            
-            <!-- Redes sociales -->
-            <div class="mt-10 flex items-center justify-center gap-x-6">
-                <a class="bg-white text-black p-2 size-12 rounded-full items-center justify-center flex hover:scale-110 transition-transform duration-300"
-                    href="https://www.linkedin.com/in/jose-juan-dos-reis-40aa10262/" target="_blank">
-                    <svg class="w-6 h-6 ">
-                        <use href="assets/sprite.svg#linkedin"></use>
-                    </svg>
-                </a>
-                <a class="bg-gradient-to-tr from-yellow-300 via-pink-600 to-purple-600 text-black p-2 size-12 rounded-full items-center justify-center flex hover:bg-pink-500 hover:scale-110 transition-transform duration-300"
-                    href="https://www.instagram.com/dossrreiss/" target="_blank">
-                    <svg class="w-6 h-6 ">
-                        <use href="assets/sprite.svg#instagram"></use>
-                    </svg>
-                </a>
-                <a class="bg-gray-900 p-2 size-12 rounded-full items-center justify-center flex
-                    hover:scale-110 transition-transform duration-300" href="https://github.com/CrankyJJ"
-                    target="_blank">
-                    <svg class="w-6 h-6 ">
-                        <use href="assets/sprite.svg#github"></use>
-                    </svg>
-                </a>
-                <a class="bg-black p-2 size-12 rounded-full items-center justify-center flex hover:scale-110 transition-transform duration-300"
-                    href="https://x.com/" target="_blank">
-                    <svg class="w-6 h-6 ">
-                        <use href="assets/sprite.svg#x"></use>
-                    </svg>
-                </a>
+            <ul class="flex gap-4 items-center justify-center">
+                <li><a href="#container">Inicio</a></li>
+                <li><a href="#about">Sobre mí</a></li>
+                <li><a href="#skills">Habilidades</a></li>
+                <li><a href="#projects">Proyectos</a></li>
+            </ul>
+        </nav>
+
+        <!-- Contenido principal -->
+        <div id="about">
+            <h2 class="text-2xl font-bold text-center mb-4">Sobre mí</h2>
+            <p>Soy José Juan dos Reis, desarrollador web fullstack con conocimientos en JavaScript, PHP, Java y MySQL.Me gusta crear aplicaciones útiles, bien organizadas y fáciles de usar.
+            </p>
+
+            <p>He desarrollado proyectos propios tanto en el frontend como en el backend, y disfruto aprendiendo cosasnuevas cada día. Trabajo con herramientas como Git, VS Code y bases de datos como MySQL.</p>
+
+            <p>Me considero una persona puntual, ordenada y con muchas ganas de seguir creciendo en este mundo. Estoy buscando oportunidades como desarrollador junior, donde pueda aportar y seguir aprendiendo junto a un buen equipo.</p>
+            <img class="size-60 rounded-full mx-auto" src="./assets/img/fotoCV.png" alt="">
+        </div>
+
+        <div id="skills">
+            <h2 class="text-2xl font-bold text-center mb-4">Habilidades</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <i class="devicon-javascript-plain colored"></i>
+                    <span>JavaScript</span>
+                </div>
+                <div class="skill-card">
+                    <i class="devicon-html5-plain colored"></i>
+                    <span>HTML</span>
+                </div>
+                <div class="skill-card">
+                    <i class="devicon-css3-plain colored"></i>
+                    <span>CSS</span>
+                </div>
+                <div class="skill-card">
+                    <i class="devicon-react-original colored"></i>
+                    <span>React</span>
+                </div>
+                <div class="skill-card">
+                    <i class="devicon-mysql-plain colored"></i>
+                    <span>MySQL</span>
+                </div>
+                <div class="skill-card">
+                    <i class="devicon-php-plain colored"></i>
+                    <span>PHP</span>
+                </div>
+                <div class="skill-card">
+                    <i class="devicon-java-plain colored"></i>
+                    <span>Java</span>
+                </div>
+                <div class="skill-card">
+                    <i class="devicon-git-plain colored"></i>
+                    <span>Git</span>
+                </div>
+                <div class="skill-card">
+                    <i class="devicon-vscode-plain colored"></i>
+                    <span>VS Code</span>
+                </div>
 
             </div>
         </div>
-    </main>
-    <footer class="text-white bg-gray-900 w-full text-center py-6 mt-20">
-        <p>© 2025 Jose Juan Dos Reis De Conceicao. Todos los derechos reservados.</p>
+
+        <div id="projects">
+            <h2 class="text-2xl font-bold text-center mb-4">Proyectos</h2>
+            <p>Me considero una persona puntual, ordenada y con muchas ganas de seguir creciendo en este mundo. Estoy buscando oportunidades como desarrollador junior, donde pueda aportar y seguir aprendiendo junto a un buen equipo.</p>
+        </div>
+    </div>
+
+    <footer class="text-white bg-gray-900 w-full text-center py-6 mt-6">
+        <div class="mt-10 flex items-center justify-center gap-x-6">
+            <a class="bg-white text-black p-2 size-12 rounded-full items-center justify-center flex hover:scale-110 transition-transform duration-300"
+                href="https://www.linkedin.com/in/jose-juan-dos-reis-40aa10262/" target="_blank">
+                <svg class="w-6 h-6 ">
+                    <use href="assets/sprite.svg#linkedin"></use>
+                </svg>
+            </a>
+            <a class="bg-gradient-to-tr from-yellow-300 via-pink-600 to-purple-600 text-black p-2 size-12 rounded-full items-center justify-center flex hover:bg-pink-500 hover:scale-110 transition-transform duration-300"
+                href="https://www.instagram.com/dossrreiss/" target="_blank">
+                <svg class="w-6 h-6 ">
+                    <use href="assets/sprite.svg#instagram"></use>
+                </svg>
+            </a>
+            <a class="bg-gray-900 p-2 size-12 rounded-full items-center justify-center flex
+            hover:scale-110 transition-transform duration-300" href="https://github.com/CrankyJJ" target="_blank">
+                <svg class="w-6 h-6 ">
+                    <use href="assets/sprite.svg#github"></use>
+                </svg>
+            </a>
+            <a class="bg-black p-2 size-12 rounded-full items-center justify-center flex hover:scale-110 transition-transform duration-300"
+                href="https://x.com/" target="_blank">
+                <svg class="w-6 h-6 ">
+                    <use href="assets/sprite.svg#x"></use>
+                </svg>
+            </a>
+        </div>
+        <p class="text-sm text-gray-400 mt-4">© 2025 Jose Juan Dos Reis De Conceicao. Todos los derechos reservados.</p>
+
     </footer>
 </body>
 
