añadido scroll smooth

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <style>
+        html{
+            scroll-behavior: smooth;
+        }
         .skill-card {
             display: flex;
             flex-direction: column;
@@ -247,6 +250,7 @@
                 closeIcon.classList.add('hidden');
             });
         });
+
     </script>
 </body>
 
