--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
     </style>
 </head>
 
-<body class="bg-gradient-to-b from-black via-sky-800 to-gray-800 min-h-screen flex flex-col">
+<!-- o to-gray-800 -->
+<body class="bg-gradient-to-b from-black via-sky-800 to-black min-h-screen flex flex-col">
 
     <div id="container" class="text-white">
         <!-- Header -->
-        <header class="sticky top-0 z-50 bg-transparent backdrop-blur-sm mb-5 shadow-lg">
+         <!-- TODO: Mirar si quitar (inicio o sobre mí). -->
+        <header class="sticky top-0 z-50 bg-transparent backdrop-blur-sm shadow-lg">
             <nav id="navbar" class="p-5">
                 <div class="flex justify-between items-center">
                     <p id="MyName" class="text-xl text-white font-bold">Jose Juan Dos Reis De Conceicao</p>
@@ -62,18 +64,18 @@
                     <!-- Menú desktop -->
                     <ul class="hidden md:flex gap-4 items-center mr-30 space-x-5">
                         <li><a href="#container" class="hover:text-sky-300 transition-colors">Inicio</a></li>
-                        <li><a href="#about" class="hover:text-sky-300 transition-colors">Sobre mí</a></li>
-                        <li><a href="#skills" class="hover:text-sky-300 transition-colors">Habilidades</a></li>
                         <li><a href="#projects" class="hover:text-sky-300 transition-colors">Proyectos</a></li>
+                        <li><a href="#skills" class="hover:text-sky-300 transition-colors">Habilidades</a></li>
+                        <li><a href="#contact" class="hover:text-sky-300 transition-colors">Contacto</a></li>
                     </ul>
                 </div>
                 
                 <!-- Menú móvil -->
                 <ul id="mobile-menu" class="hidden md:hidden flex-col gap-4 mt-4 pb-2">
                     <li><a href="#container" class="block hover:text-sky-300 transition-colors">Inicio</a></li>
-                    <li><a href="#about" class="block hover:text-sky-300 transition-colors">Sobre mí</a></li>
-                    <li><a href="#skills" class="block hover:text-sky-300 transition-colors">Habilidades</a></li>
                     <li><a href="#projects" class="block hover:text-sky-300 transition-colors">Proyectos</a></li>
+                    <li><a href="#skills" class="block hover:text-sky-300 transition-colors">Habilidades</a></li>
+                    <li><a href="#contact" class="block hover:text-sky-300 transition-colors">Contacto</a></li>
                 </ul>
             </nav>
         </header>
@@ -97,7 +99,7 @@
                         <div>
                             <p class="text-sky-300 text-lg md:text-xl font-semibold mb-2">Hola, soy</p>
                             <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-4 bg-gradient-to-r from-white to-sky-300 bg-clip-text text-transparent">
-                                José Juan dos Reis
+                                José Juan Dos Reis
                             </h1>
                             <h2 class="text-2xl md:text-3xl lg:text-4xl font-semibold text-sky-200 mb-6">
                                 Desarrollador Web Fullstack
@@ -106,7 +108,7 @@
 
                         <div class="space-y-4 text-gray-300 text-base md:text-lg">
                             <p>
-                                Desarrollador web fullstack con conocimientos en <span class="text-sky-300 font-semibold">JavaScript, PHP, Java y MySQL</span>. 
+                                Soy un desarrollador web fullstack con conocimientos en <span class="text-sky-300 font-semibold">JavaScript, PHP, Java y MySQL</span>. 
                                 Me gusta crear aplicaciones útiles, bien organizadas y fáciles de usar.
                             </p>
 
@@ -128,10 +130,119 @@
                                class="px-8 py-3 bg-sky-500 hover:bg-sky-600 text-white font-semibold rounded-lg shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300">
                                 Ver Proyectos
                             </a>
-                            <a href="#skills" 
-                               class="px-8 py-3 bg-transparent border-2 border-sky-400 hover:bg-sky-400/10 text-sky-300 font-semibold rounded-lg shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300">
-                                Habilidades
+                            <a href="./assets/pdf/Jose juan dos reis de conceicao.pdf" download
+                               class="px-8 py-3 bg-transparent border-2 border-sky-400 hover:bg-sky-400/10 text-sky-300 font-semibold rounded-lg shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300 flex items-center justify-center gap-2">
+                                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
+                                </svg>
+                                Descargar CV
                             </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sección Proyectos -->
+        <section id="projects" class="min-h-screen py-20 px-4">
+            <div class="max-w-7xl mx-auto">
+                <div class="text-center mb-12">
+                    <h2 class="text-3xl md:text-4xl font-bold mb-4 bg-gradient-to-r from-white to-sky-300 bg-clip-text text-transparent">
+                        Mis Proyectos
+                    </h2>
+                    <p class="text-gray-400 text-lg">Algunos de los proyectos en los que he trabajado</p>
+                </div>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
+                    <!-- Proyecto 1 -->
+                    <div class="group bg-gray-800/50 backdrop-blur-sm rounded-xl overflow-hidden border border-gray-700 hover:border-sky-500 transition-all duration-300 hover:shadow-xl hover:shadow-sky-500/20 hover:-translate-y-2">
+                        <div class="relative overflow-hidden aspect-video">
+                            <img src="./assets/img/Proyecto_1.png" 
+                                 alt="Proyecto 1" 
+                                 class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                            <div class="absolute inset-0 bg-gradient-to-t from-gray-900 via-transparent to-transparent opacity-60"></div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold text-white mb-3">Viral Challenge</h3>
+                            <p class="text-gray-400 mb-4 line-clamp-3">
+                                Proyecto de final de grado realizado en el que se desarrolla una plataforma web para gestionar y monitorear los desafíos virales junto a dos compañeros del grado para reforzar el trabajo en equipo.
+                            </p>
+                            <div class="flex gap-2 mb-4 flex-wrap">
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">HTML</span>
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">CSS</span>
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">PHP</span>
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">JavaScript</span>
+                            </div>
+                            <div class="flex gap-3">
+                                <a href="https://www.psinnova.com/viralchallenge/login.php" target="_blank" class="flex-1 px-4 py-2 bg-sky-500 hover:bg-sky-600 text-white rounded-lg text-center font-medium transition-colors">
+                                    Ver Demo
+                                </a>
+                                <a href="https://github.com/hugocarni/VIRAL-CHALLENGE" target="_blank" class="px-4 py-2 bg-gray-700 hover:bg-gray-600 text-white rounded-lg transition-colors">
+                                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Proyecto 2 -->
+                    <div class="group bg-gray-800/50 backdrop-blur-sm rounded-xl overflow-hidden border border-gray-700 hover:border-sky-500 transition-all duration-300 hover:shadow-xl hover:shadow-sky-500/20 hover:-translate-y-2">
+                        <div class="relative overflow-hidden aspect-video">
+                            <img src="./assets/img/proyecto2.png" 
+                                 alt="Proyecto 2" 
+                                 class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                            <div class="absolute inset-0 bg-gradient-to-t from-gray-900 via-transparent to-transparent opacity-60"></div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold text-white mb-3">Weather app</h3>
+                            <p class="text-gray-400 mb-4 line-clamp-3">
+                                Descripción breve del proyecto 2. Aquí puedes explicar las tecnologías utilizadas y el propósito del proyecto.
+                            </p>
+                            <div class="flex gap-2 mb-4 flex-wrap">
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">PHP</span>
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">MySQL</span>
+                            </div>
+                            <div class="flex gap-3">
+                                <a href="#" class="flex-1 px-4 py-2 bg-sky-500 hover:bg-sky-600 text-white rounded-lg text-center font-medium transition-colors">
+                                    Ver Demo
+                                </a>
+                                <a href="#" class="px-4 py-2 bg-gray-700 hover:bg-gray-600 text-white rounded-lg transition-colors">
+                                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Proyecto 3 -->
+                    <div class="group bg-gray-800/50 backdrop-blur-sm rounded-xl overflow-hidden border border-gray-700 hover:border-sky-500 transition-all duration-300 hover:shadow-xl hover:shadow-sky-500/20 hover:-translate-y-2">
+                        <div class="relative overflow-hidden aspect-video">
+                            <img src="./assets/img/proyecto3.png" 
+                                 alt="Proyecto 3" 
+                                 class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
+                            <div class="absolute inset-0 bg-gradient-to-t from-gray-900 via-transparent to-transparent opacity-60"></div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold text-white mb-3">Task app</h3>
+                            <p class="text-gray-400 mb-4 line-clamp-3">
+                                Descripción breve del proyecto 3. Aquí puedes explicar las tecnologías utilizadas y el propósito del proyecto.
+                            </p>
+                            <div class="flex gap-2 mb-4 flex-wrap">
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">Java</span>
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">MySQL</span>
+                            </div>
+                            <div class="flex gap-3">
+                                <a href="#" class="flex-1 px-4 py-2 bg-sky-500 hover:bg-sky-600 text-white rounded-lg text-center font-medium transition-colors">
+                                    Ver Demo
+                                </a>
+                                <a href="#" class="px-4 py-2 bg-gray-700 hover:bg-gray-600 text-white rounded-lg transition-colors">
+                                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                                    </svg>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -179,16 +290,6 @@
                     <span>VS Code</span>
                 </div>
 
-            </div>
-        </div>
-
-        <!-- Proyectos -->
-        <div id="projects">
-            <h2 class="text-2xl font-bold text-center mb-4">Proyectos</h2>
-            <div class="flex justify-center items-center gap-4 p-5">
-                <p>Me considero una persona puntual, ordenada y con muchas ganas de seguir creciendo en este mundo. Estoy
-                    buscando oportunidades como desarrollador junior, donde pueda aportar y seguir aprendiendo junto a un
-                    buen equipo.</p>
             </div>
         </div>
     </div>
