--- a/index.html
+++ b/index.html
@@ -55,6 +55,98 @@
             box-shadow: 0 4px 15px rgba(14, 165, 233, 0.3);
             transform: translateY(-2px);
         } */
+        /* From Uiverse.io by kat_2522 */
+        .loader {
+            max-width: fit-content;
+            color: rgb(242, 255, 240);
+            font-size: 50px;
+            font-family: Mine;
+            position: relative;
+            font-style: italic;
+            font-weight: 600;
+        }
+
+        .loader span {
+            animation: cut 2s infinite;
+            transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+
+        .loader:hover {
+            color: #fcffdf;
+        }
+
+        .loader::after {
+            position: absolute;
+            content: "";
+            width: 100%;
+            height: 6px;
+            border-radius: 4px;
+            background-color: #82ecff91;
+            top: 0px;
+            filter: blur(10px);
+            animation: scan 2s infinite;
+            left: 0;
+            z-index: 0;
+            transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+
+        .loader::before {
+            position: absolute;
+            content: "";
+            width: 100%;
+            height: 5px;
+            border-radius: 4px;
+            background-color: #82ecff91;
+            top: 0px;
+            animation: scan 2s infinite;
+            left: 0;
+            z-index: 1;
+            filter: opacity(0.9);
+            transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+
+        @keyframes scan {
+            0% {
+                top: 0px;
+            }
+
+            25% {
+                top: 54px;
+            }
+
+            50% {
+                top: 0px;
+            }
+
+            75% {
+                top: 54px;
+            }
+        }
+
+        @keyframes cut {
+            0% {
+                clip-path: inset(0 0 0 0);
+            }
+
+            25% {
+                clip-path: inset(100% 0 0 0);
+            }
+
+            50% {
+                clip-path: inset(0 0 100% 0);
+            }
+
+            75% {
+                clip-path: inset(0 0 0 0);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .loader {
+                font-size: 2.5rem;
+                max-width: none;
+            }
+        }
     </style>
 </head>
 
@@ -68,7 +160,7 @@
         <header class="sticky top-0 z-50 bg-transparent backdrop-blur-sm shadow-lg border-b-2 border-sky-300">
             <nav id="navbar" class="p-5">
                 <div class="flex justify-between items-center">
-                    <p id="MyName" class="text-xl text-white font-bold">JJ<span class="text-sky-300">.dev</span>
+                    <p id="MyName" class="text-2xl text-white font-bold">JJ<span class="text-sky-300">.dev</span>
                     </p>
 
                     <!-- Botón hamburguesa (visible solo en móvil) -->
@@ -83,7 +175,7 @@
 
                     <!-- Menú desktop -->
                     <ul class="hidden md:flex gap-4 items-center mr-30 space-x-5">
-                        <li><a href="#container" class="hover:text-sky-300 transition-colors">Inicio</a></li>
+                        <li><a href="#container" class="hover:text-sky-300 transition-colors">Sobre mí</a></li>
                         <li><a href="#projects" class="hover:text-sky-300 transition-colors">Proyectos</a></li>
                         <li><a href="#skills" class="hover:text-sky-300 transition-colors">Habilidades</a></li>
                         <li><a href="#contact" class="hover:text-sky-300 transition-colors">Contacto</a></li>
@@ -92,7 +184,7 @@
 
                 <!-- Menú móvil -->
                 <ul id="mobile-menu" class="hidden md:hidden flex-col gap-4 mt-4 pb-2">
-                    <li><a href="#container" class="block hover:text-sky-300 transition-colors">Inicio</a></li>
+                    <li><a href="#container" class="block hover:text-sky-300 transition-colors">Sobre mí</a></li>
                     <li><a href="#projects" class="block hover:text-sky-300 transition-colors">Proyectos</a></li>
                     <li><a href="#skills" class="block hover:text-sky-300 transition-colors">Habilidades</a></li>
                     <li><a href="#contact" class="block hover:text-sky-300 transition-colors">Contacto</a></li>
@@ -119,9 +211,9 @@
                     <div class="w-full md:w-2/3 flex flex-col gap-6 text-center md:text-left order-2 md:order-2">
                         <div>
                             <p class="text-sky-300 text-lg md:text-xl font-semibold mb-2">Hola, soy</p>
-                            <h1
-                                class="text-4xl md:text-5xl lg:text-6xl font-bold mb-4 bg-gradient-to-r from-white to-sky-300 bg-clip-text text-transparent">
-                                José Juan Dos Reis
+                            <h1 id="nombreHero"
+                                class="loader text-4xl md:text-5xl lg:text-6xl font-bold mb-4 bg-gradient-to-r from-white to-sky-300 bg-clip-text text-transparent">
+                                <span>José Juan Dos Reis</span>
                             </h1>
                             <h2 class="text-2xl md:text-3xl lg:text-4xl font-semibold text-sky-200 mb-6">
                                 Desarrollador Web Fullstack
@@ -202,8 +294,8 @@
                                 reforzar el trabajo en equipo.
                             </p>
                             <div class="flex gap-2 mb-4 flex-wrap">
-                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">HTML</span>
-                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">CSS</span>
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">Bootstrap</span>
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">MySQL</span>
                                 <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">PHP</span>
                                 <span
                                     class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">JavaScript</span>
@@ -385,6 +477,8 @@
         const menuIcon = document.getElementById('menu-icon');
         const closeIcon = document.getElementById('close-icon');
         const myName = document.getElementById('MyName');
+        const nombreHero = document.getElementById('nombreHero');
+        const nombreHero2 = document.getElementById('nombreHero2');
 
         menuToggle.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
@@ -404,6 +498,7 @@
                 closeIcon.classList.add('hidden');
             });
         });
+
 
     </script>
 </body>
