--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 <!-- o to-gray-800 -->
 
-<body class="bg-gradient-to-b from-black via-sky-800 to-black min-h-screen flex flex-col">
+<body class="bg-gradient-to-b from-black via-sky-900 to-black min-h-screen flex flex-col">
 
     <div id="container" class="text-white">
         <!-- Header -->
@@ -160,8 +160,8 @@
         <header class="sticky top-0 z-50 bg-transparent backdrop-blur-sm shadow-lg border-b-2 border-sky-300">
             <nav id="navbar" class="p-5">
                 <div class="flex justify-between items-center">
-                    <p id="MyName" class="text-2xl text-white font-bold">JJ<span class="text-sky-300">.dev</span>
-                    </p>
+                    <a href="#container"><p id="MyName" class="text-2xl text-white font-bold">JJ<span class="text-sky-300">.dev</span>
+                    </p></a>
 
                     <!-- Botón hamburguesa (visible solo en móvil) -->
                     <button id="menu-toggle" class="md:hidden text-white focus:outline-none ml-auto">
@@ -269,7 +269,7 @@
             <div class="max-w-7xl mx-auto">
                 <div class="text-center mb-12">
                     <h2
-                        class="text-3xl md:text-4xl font-bold mb-4 bg-gradient-to-r from-white to-sky-300 bg-clip-text text-transparent">
+                        class="text-3xl md:text-4xl font-bold mb-4 mt-4 bg-gradient-to-r from-white to-sky-300 bg-clip-text text-transparent">
                         Mis Proyectos
                     </h2>
                     <p class="text-gray-400 text-lg">Algunos de los proyectos en los que he trabajado</p>
@@ -393,7 +393,13 @@
 
         <!-- Habilidades -->
         <section id="skills" class="min-h-screen py-20 px-4">
-            <h2 class="text-2xl font-bold text-center mb-4">Habilidades</h2>
+            <div class="text-center mb-12">
+                <h2
+                    class="text-3xl md:text-4xl font-bold mb-4 mt-4 bg-gradient-to-r from-white to-sky-300 bg-clip-text text-transparent">
+                    Mis Habilidades
+                </h2>
+                <p class="text-gray-400 text-lg">Estas son las herramientas que utilizo en mis proyectos:</p>
+            </div>
             <div class="skills-grid">
                 <div class="skill-card">
                     <i class="devicon-javascript-plain colored"></i>
@@ -408,8 +414,12 @@
                     <span>CSS</span>
                 </div>
                 <div class="skill-card">
-                    <i class="devicon-react-original colored"></i>
-                    <span>React</span>
+                    <i class="devicon-bash-plain"></i>
+                    <span>Bash</span>
+                </div>
+                <div class="skill-card">
+                    <i class="devicon-github-plain "></i>
+                    <span>GitHub</span>
                 </div>
                 <div class="skill-card">
                     <i class="devicon-mysql-plain colored"></i>
@@ -435,6 +445,24 @@
                     <i class="devicon-bootstrap-plain colored"></i>
                     <span>Bootstrap</span>
                 </div>
+                <div class="skill-card">
+                    <i class="devicon-react-original colored"></i>
+                    <span>React</span>
+                </div>
+                <div class="skill-card">
+                    <i class="devicon-vscode-plain colored"></i>
+                    <span>VsCode</span>
+                </div>
+                <div class="skill-card">
+                    <i class="devicon-wordpress-plain"></i>
+                    <span>Wordpress</span>
+                </div>
+                <div class="skill-card">
+                    <i class="devicon-figma-plain colored"></i>
+                    <span>Figma</span>
+                </div>
+
+
             </div>
         </section>
     </div>
